--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             <meta name="viewport" connten="width=devise-width, init=1">
             <title>MATCHA - HOLA MUNDO</title>
             <link rel="stylesheet" href="estilos.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com"> 
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+            <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="header">
